kubernetes/base/cloudmart-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudmart-backend
  namespace: cloudmart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudmart-backend
  template:
    metadata:
      labels:
        app: cloudmart-backend
    spec:
      containers:
      - name: cloudmart-backend
        # Тег :latest замінимо у GitHub Actions пайплайні динамічно
        image: ghcr.io/igordems/cloudmart-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: gcp-secret-volume
          mountPath: /var/secrets/google
          readOnly: true
      volumes:
      - name: gcp-secret-volume
        secret:
          secretName: gcp-sa-secret
          optional: true # Дозволяє поду стартувати без помилок, поки GCP не налаштовано
