kubernetes/base/cloudmart-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudmart-backend
spec:
  selector:
    app: cloudmart-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
