kubernetes/base/cloudmart-backend/cloudmart-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudmart-backend-ingress
  namespace: cloudmart
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.192.168.1.240.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudmart-backend
            port:
              number: 8080
